mysys/mf_tempdir.c
@@ -85,8 +85,11 @@ char *my_tmpdir(MY_TMPDIR *tmpdir)
 void free_tmpdir(MY_TMPDIR *tmpdir)
 {
   uint i;
-  for (i=0; i<=tmpdir->max; i++)
-    my_free(tmpdir->list[i], MYF(0));
+  if (tmpdir->full_list.elements)
+  {
+    for (i=0; i<=tmpdir->max; i++)
+      my_free(tmpdir->list[i], MYF(0));
+  }
   delete_dynamic(&tmpdir->full_list);
   pthread_mutex_destroy(&tmpdir->mutex);
 }
